<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/newRappelTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/new_titre"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newRappelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newRappelTitre"
        android:background="@null"
        android:hint="@string/new_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newRappelDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/new_date"
        android:layout_below="@id/newRappelText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/newRappelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newRappelDate"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>