<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".ReglagesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginStart="27dp">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_mate_sans_titre">
        </ImageView>

        <TextView
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/parametres"
            android:textColor="@color/gris_fonce"
            android:textSize="35sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/es_tu_s_r_de_vouloir_quitter_ta_coloc"
            android:textColor="@color/gris_fonce"
            android:textSize="20sp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAlignment="center"
            tools:ignore="RtlCompat">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_quitter_oui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_oui_annuler"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/oui"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginRight="10dp">

        </Button>

        <Button
            android:id="@+id/btn_annuler_quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_oui_annuler"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/annuler"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginLeft="10dp">

        </Button>


    </LinearLayout>

</LinearLayout>