<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_accueil"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom|center_horizontal">

        <ImageView
            android:layout_width="266dp"
            android:layout_height="228dp"
            android:src="@drawable/logo_mate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/slogan"
                android:textColor="#000000"
                android:textSize="20sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/identifiant_coloc"
                android:layout_width="286dp"
                android:layout_height="42dp"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/classique_input"
                android:fontFamily="@font/poppins_medium_italic"
                android:hint="@string/identitfiant_de_la_coloc"
                android:inputType="number"
                android:paddingStart="20dp"
                android:textColor="#9E9E9E"
                android:textColorHint="#9E9E9E"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btn_rejoindre_coloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_rejoindre"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/rejoindre"
                android:textAlignment="center"

                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp">

            </Button>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/ou"
                android:textColor="#9E9E9E"
                android:textSize="15sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btn_creer_coloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/classique_bouton"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/creer_colocation"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp">

            </Button>
        </LinearLayout>



    </LinearLayout>




</LinearLayout>