<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasserCouronneActivity">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_mate_sans_titre"></ImageView>

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/parametres"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/a_qui_souhaites_tu_passer_la_couronne"
        android:textAlignment="center"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/btn_couronne_coloc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_btn_quitter"
        android:fontFamily="@font/poppins_medium"
        android:text="Axel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_couronne_coloc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_btn_quitter"
        android:fontFamily="@font/poppins_medium"
        android:text="Vincent"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_couronne_coloc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_btn_quitter"
        android:fontFamily="@font/poppins_medium"
        android:text="Anto"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_passer_couronne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/classique_bouton"
        android:fontFamily="@font/poppins_semibold"
        android:layout_centerHorizontal="true"

        android:text="@string/passer_ma_couronne"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="400dp"
        android:textSize="20sp"/>


</RelativeLayout>